agenda-crud/k8s/postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: agenda-crud
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
  namespace: agenda-crud
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: agenda-crud
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        role: db
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests: { cpu: "80m", memory: "256Mi" }
            limits: { cpu: "200m", memory: "512Mi" }
          startupProbe:
            exec:
              command:
                [
                  "bash",
                  "-lc",
                  "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -h 127.0.0.1 -p 5432",
                ]
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            tcpSocket: { port: 5432 }
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            exec:
              command:
                [
                  "bash",
                  "-lc",
                  "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB -h 127.0.0.1 -p 5432",
                ]
            initialDelaySeconds: 10
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
